# bag_converter

./: .gitignore  .gitmodules  README.md  bag_converter
docker/: Dockerfile  build.sh  entrypoint.sh
src/bag_manipulate/: CMakeLists.txt  package.xml
src/bag_manipulate/src/: bag_manipulate.cpp  seyond_bag_decoder.cpp  seyond_nebula_bag_decoder.cpp
src/seyond_decoder/: CMakeLists.txt  README.md  package.xml
src/seyond_decoder/example/: decoder_example.cpp
src/seyond_decoder/include/seyond_decoder/: point_types.h  seyond_decoder.hpp
src/seyond_decoder/src/: seyond_decoder.cpp
src/seyond_nebula_decoder/: CMakeLists.txt  README.md  package.xml
src/seyond_nebula_decoder/include/seyond_nebula_decoder/: seyond_nebula_decoder.hpp
src/seyond_nebula_decoder/src/: seyond_nebula_decoder.cpp
